--- a/Project 1/Survey form.html
+++ b/Project 1/Survey form.html
@@ -10,7 +10,7 @@
     <body>
         <div class="container">
             <h1 id="title">Survey Form</h1>
-            <p id="description">Thank you for taking your time to provide feedback. We appreciate hearing from you and will review your comments carefully.</p>
+            <p id="description">Thank you for taking your time to provide feedback.<br>We appreciate hearing from you and will review your comments carefully.</p>
             <form id="survey-form">
                 <div class="survey-form-group">
                     <label for="name" id="name-label">Enter your name: <input type="text" id="name" name="name" placeholder="Anoosha" required></label>
@@ -38,18 +38,18 @@
                 </div>
 
                 <div class="survey-form-group">
-                    <label for="hobbies">Which of the following hobbies do you enjoy?
+                    <label id="hobbies-label" for="hobbies">Which of the following hobbies do you enjoy?<br>
                         <input type="checkbox" id="reading" name="hobbies" value="reading">
-                        <label for="reading">Reading</label>
+                        <label id="reading-label" for="reading">Reading</label>
 
                         <input type="checkbox" id="hiking" name="hobbies" value="hiking">
-                        <label for="hiking">Hiking</label>
+                        <label id="hiking-label" for="hiking">Hiking</label>
 
                         <input type="checkbox" id="gaming" name="hobbies" value="gaming">
-                        <label for="gaming">Gaming</label>
+                        <label id="gaming-label" for="gaming">Gaming</label>
 
                         <input type="checkbox" id="sports" name="hobbies" value="sports">
-                        <label for="sports">Sports</label>
+                        <label id="sports-label" for="sports">Sports</label>
                     </label>
                 </div>
 
